# mecademic_desctiption

./: CMakeLists.txt  README.md  package.xml
launch/: meca_500_r3.launch.py  meca_500_r3_withtool.launch.py  meca_ATI_sensor_tool.launch.py  meca_bota_sensor_tool.launch.py
urdf/: meca500_robot_with_tool.urdf  meca_500_r3.urdf  meca_500_r3Robot.urdf.xacro  meca_500_r3_description.xacro  meca_500_r3_robot_with_tool.urdf  meca_500_r3_robot_withtool.urdf.xacro  meca_robot_with_ATIandshaft.urdf  meca_robot_with_ATIandshaft.urdf.xacro  meca_robot_with_botaandshaft.urdf  meca_robot_with_botaandshaft.urdf.xacro
