<?xml version="1.0"?>
<package format="2">
  <name>mecademic_description</name>
  <version>1.0.0</version>
  <description>The mecademic_description package</description>

  <maintainer email="support@mecademic.com">Mecademic</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <!-- Only one export tag -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
